--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.data.mongodb.database=admin
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.username=admin
-spring.data.mongodb.password=mongodb@1123
+spring.data.mongodb.username=
+spring.data.mongodb.password=
 
 logging.level.org.springframework=ERROR
 logging.level.org.apache.kafka=ERROR
